Fix: added font-weight-bold to text Lighthouse saus bg and foreground colors dont have sufficient contrast ratio

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -317,7 +317,7 @@ hr {
     border-top: 1px solid #fff;
 }
 
-.savings-text {
+.purple-text {
     color: #231557;
 }
 
